--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -33,6 +33,7 @@ appcompat = "1.7.1"
 material = "1.12.0"
 
 [libraries]
+koin-android-workmanager = { group = "io.insert-koin", name = "koin-androidx-workmanager", version.ref = "koin" }
 androidx-health-services-client = { group = "androidx.health", name = "health-services-client", version.ref = "health" }
 androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycleRuntimeKtx" }
 koin-androidx-compose = { group = "io.insert-koin", name = "koin-androidx-compose", version.ref = "koin" }
@@ -102,7 +103,7 @@ compose-debug = [
     "androidx-ui-tooling",
     "androidx-ui-test-manifest",
 ]
-koin = ["koin-androidx-compose",]
+koin = ["koin-androidx-compose","koin-android-workmanager"]
 ktor = [
     "ktor-client-auth",
     "ktor-client-cio",
